# project-s

./: .dockerignore  .gitignore  .npmrc  package.json  pnpm-lock.yaml
.github/: logo.avif
apps/chrome-extension/: README.md  package.json  tsconfig.json  vite.config.ts
apps/chrome-extension/public/: manifest.json
apps/chrome-extension/src/: App.tsx  main.tsx  manifest.ts
apps/chrome-extension/src/pages/content/: index.tsx
apps/chrome-extension/src/pages/newtab/: Newtab.tsx  index.tsx
apps/chrome-extension/utils/plugins/: build-content-script.ts
apps/tauri/: index.html  package.json  postcss.config.js  tailwind.config.cjs  tailwind.config.js  vite.config.ts
apps/tauri/src/: App.tsx  ipc.ts  main.tsx
apps/tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri/src-tauri/src/: commands.rs  main.rs  state.rs
apps/vscode-extension/: package.json
apps/vscode-extension/src/: extension.ts
apps/web/: .env.example  Dockerfile  drizzle.config.ts  next.config.js  next.config.mjs  package.json  postcss.config.js  tailwind.config.js  tsconfig.json
apps/web/app/: layout.tsx  page.tsx
apps/web/drizzle/: schema.ts
apps/web/src/: env.mjs  env.ts
apps/web/src/app/: Footer.tsx  layout.tsx  page.tsx
apps/web/src/auth/: auth.ts
apps/web/src/components/: Header.tsx
apps/web/src/context/: Provider.tsx  TrpcProvider.tsx
apps/web/src/drizzle/: db.ts  schema.ts
apps/web/src/pages/: _app.tsx  index.tsx
apps/web/src/server/: auth.ts
apps/web/src/trpc/: root.ts  trpc.ts
apps/web/src/utils/: api.ts
apps/web/src/validators/: user.ts
(+24 files in other folders)
