[package]
name = "project-s"
version = "0.1.0"
description = "project-s's desktop application"
authors = ["Fractal-Tess"]
license = ""
repository = "https://github.com/Fractal-Tess/project-s"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
serde_json = "1.0"
specta = "1.0.5"
tauri-specta = { version = "1.0.0", features = ["javascript", "typescript"] }
thiserror = "1.0.44"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
